--- a/eclipse-project/proguard.cfg
+++ b/eclipse-project/proguard.cfg
@@ -13,7 +13,10 @@
 -keep public class * extends android.app.backup.BackupAgentHelper
 -keep public class * extends android.preference.Preference
 -keep public class com.android.vending.licensing.ILicensingService
-
+-keep public class com.box.onecloud.android.OneCloudData
+{
+    public protected private *;
+}
 -keepclasseswithmembernames class * {
     native <methods>;
 }
