--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "AndroidLib"]
 	path = AndroidLib
-	url = git@github.com:xgouchet/AndroidLib
+	url = git://github.com/xgouchet/AndroidLib.git
