--- a/Ted/project.properties
+++ b/Ted/project.properties
@@ -8,5 +8,5 @@
 # project structure.
 
 # Project target.
-target=android-15
-android.library.reference.1=..\\AndroidLib
+target=android-17
+android.library.reference.1=../AndroidLib
