--- a/Ted/project.properties
+++ b/Ted/project.properties
@@ -9,4 +9,5 @@
 
 # Project target.
 target=android-17
-android.library.reference.1=../AndroidLib
+android.library.reference.1=..\\AndroidLib
+android.library.reference.2=../../AndroidLib
